--- a/src/style.css
+++ b/src/style.css
@@ -17,7 +17,7 @@ body {
 
 .no-underline {
   text-decoration: none;
-  background-color: rgb(60, 60, 60);
+  /* background-color: rgb(60, 60, 60); */
 }
 
 
